--- a/qml.qrc
+++ b/qml.qrc
@@ -132,6 +132,9 @@
         <file>image/xiaolian.png</file>
         <file>image/dianzan.png</file>
         <file>image/currency.wav</file>
+        <file>image/voice_bomb.mp3</file>
+        <file>image/voice_tooslow.mp3</file>
+        <file>image/voice_fight.mp3</file>
     </qresource>
     <qresource prefix="/componet"/>
 </RCC>
